--- a/assents/css/style.css
+++ b/assents/css/style.css
@@ -20,13 +20,13 @@ a:hover {
 }
 
 /* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
+  background-color: rgb(150, 147, 147);
+  border: .05rem solid rgb(148, 148, 148);
 }
 
 
@@ -37,13 +37,13 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: rgb(26, 123, 179);
 }
 
 body {
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
+  color: rgb(122, 122, 122);
 
 }
 
